# my_repo

CF Pascal/lab10/10.2/: 10.2.a.pas  10.2.b.pas  10.2.d.pas
CF Pascal/lab11/: lw11.docx
CF_Pascal/10.2.n/: PrintBrackets.pas  notes.txt
CF_Pascal/10.2.n/10.2/: Лаб.р.10.2 Контроль версий.txt  задание лаб.р.10.2.txt  условия.txt
CF_Pascal/10.2.n/10.2.a/: 10.2.1.pas  10.2.2.pas  10.2.3.pas  10.2.4.pas  10.2.5.pas  10.2.6.pas  in.txt  out.txt
CF_Pascal/10.2.n/10.2.b/: 10.2.10.1.pas  10.2.10.pas  10.2.7.1.pas  10.2.7.pas  10.2.8.1.pas  10.2.8.pas  10.2.9.1.pas  10.2.9.pas  in.txt  out.txt
CF_Pascal/10.2.n/10.2.c/: 10.2.11.1.pas  10.2.11.pas  10.2.12.1.pas  10.2.12.pas  10.2.13.1.pas  10.2.13.pas  in.txt  out.txt
CF_Pascal/10.2.n/10.2.d/: 10.2.14.pas  10.2.15.pas  10.2.16.1.pas  10.2.16.pas  10.2.17.1.pas  10.2.17.pas  10.2.18.0.1.pas  10.2.18.1.1.pas  10.2.18.1.pas  10.2.18.pas  10.2.19.1.pas  10.2.19.pas  10.2.20.1.pas  10.2.20.pas  10.2.21.1.pas  10.2.21.pas  10.2.22.1.pas  10.2.22.pas  in.txt  out.txt
CF_Pascal/lab01/: 1.1.1a.pas  1.1.1b.pas  1.1.1c.pas  1.1.2a.pas  1.1.2b.pas  1.1.2c.pas  1.1.3a.pas  1.1.3b.pas  1.1.3c.pas  1.2.1a.pas  1.2.1b.pas  1.2.2.pas  Lw1.docx
CF_Pascal/lab02/: 2.2.2.pas  2.3.1.pas  2.3.2.pas  lw2.docx
CF_Pascal/lab04/: 4.1.a.pas  4.1.b.pas  4.1.с.pas  4.2.a.pas  4.2.b.pas  4.2.с.pas  4.3.a.pas  4.3.b.pas  4.3.c.pas  4.4.pas
CF_Pascal/lab05/5.1/: 1.pas  2.pas  3.pas
CF_Pascal/lab05/5.2/: 1.pas  2.pas
CF_Pascal/lab05/5.3/: 1.pas
CF_Pascal/lab06/: lw6.rtf
CF_Pascal/lab06/6.1/: 6.1.pas
CF_Pascal/lab06/6.2/: 6.2.1.pas  6.2.2.pas  6.2.3.pas
CF_Pascal/lab06/6.3/: 6.3.1.pas  6.3.2.pas  6.3.3.pas  6.3.4.pas
CF_Pascal/lab07/: lw7.docx
CF_Pascal/lab07/7.1/: 7.1.b.1.pas  7.1.b.2.pas  7.1.b.3.pas
CF_Pascal/lab07/7.2/: 7.2.pas
CF_Pascal/lab07/7.3/: 7.3.pas
CF_Pascal/lab07/7.4/: 7.4.a.pas  7.4.b.pas
CF_Pascal/lab08/: lw8.docx
CF_Pascal/lab10/10.2/: 10.2.c.pas  in.txt  out.txt
SFML С++/lw00/: hello.cpp  hello_err.cpp  square_equation.cpp
SFML С++/sfml.2/: CMakeLists.txt
SFML С++/sfml.2/00/: CMakeLists.txt
SFML С++/sfml.2/03/: main.cpp
SFML С++/sfml.2/sfml2.2/: main.cpp
SFML С++/sfml.3/: CMakeLists.txt
SFML С++/workshop2/: CMakeLists.txt
SFML С++/workshop2/workshop2.1/: main.cpp
SFML С++/workshop2/workshop2.3/: main.cpp
SFML С++/workshop2/workshop2.5/: main.cpp
SFML С++/workshop2/workshop2.6/: CMakeLists.txt  main.cpp
SFML С++/workshop2/workshop2.7/: main.cpp
SFML С++/workshop3/: CMakeLists.txt
SFML_C/: 123.txt
SFML_C/lw00/: linear_equation.cpp
SFML_C/mySelfDevelopment/: CMakeLists.txt
SFML_C/mySelfDevelopment/circleMovingBall/: CMakeLists.txt  main.cpp
SFML_C/mySelfDevelopment/pumpingBall/: CMakeLists.txt  main.cpp
SFML_C/sfml.1/: CMakeLists.txt
SFML_C/sfml.1/00/: CMakeLists.txt
SFML_C/sfml.1/01/: main.cpp
SFML_C/sfml.1/02/: main.cpp
SFML_C/sfml.1/sfml1.1/: CMakeLists.txt
SFML_C/sfml.1/sfml1.3/: main.cpp
SFML_C/workshop1/: CMakeLists.txt
SFML_C/workshop3/: CMakeLists.txt
(+47 files in other folders)
